--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /nbproject/private/
-/inc/config.php
-/inc/settings.php
-/inc/init.php
-/Thumbs.db
+inc/config.php
+inc/settings.php
+inc/init.php
+
 
