project license added

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,8 @@
+file.reference.development-ocos=.
 ignore.path=
 include.path=\
-    ${php.global.include.path}
+    ${php.global.include.path}:\
+    ${file.reference.development-ocos}
 php.version=PHP_53
 phpunit.bootstrap=
 phpunit.bootstrap.create.tests=false
@@ -13,3 +15,4 @@ src.dir=.
 tags.asp=false
 tags.short=false
 web.root=.
+project.license=ocos
